<resources>
    <string name="app_name">Sistema Reserva Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_aun_no_registrado">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Registrar</string>
    <string name="label_ir_a_login">¿Ya tienes una cuenta?</string>
    <string name="btn_crear_cita">Reservar cita</string>
    <string name="btn_mis_citas">Mis citas</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_crear_cita">Reservar cita</string>
    <string name="label_descripcion">Descripción</string>
    <string name="label_especialidad">Especialidad</string>
    <string name="label_tipo_cita">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_fecha_cita">Fecha para la cita</string>
    <string name="btn_confirmar">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_micita_id">Cita médica %1$d</string>
    <string name="item_micita_fecha">Atención el día %1$s</string>
    <string name="item_micita_hora">A las %1$s</string>
    <string name="mis_citas_medicas">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_exit_titulo">¿Estás seguro que deseas salir?</string>
    <string name="dialog_exit_mensaje">Si abandonas el registro, los datos que habías ingresado se perderán.</string>
    <string name="positivo_btn">Sí, salir</string>
    <string name="negativo_btn">Continuar registro</string>
    <string name="validar_descripcion_cita">La descripción es demasiado corta</string>
    <string name="label_hora_cita">Hora de cita</string>
    <string name="label_confirmar_datos_cita">Datos de la cita</string>
    <string name="validar_fecha_cita">Es necesario seleccionar una fecha</string>
    <string name="validar_hora_cita">Es necesario definir una hora para la cita</string>
    <string name="Error_Cargar_Especialidades">Ocurrió un problema al cargar las especialidades</string>
    <string name="Error_Cargar_Doctores">Ocurrió un problema al cargar los médicos</string>
    <string name="Error_Cargar_Horas">No se han podido cargar las horas</string>
    <string name="Label_Seleccionar_Medico_Fecha_Ver_Horas_Disponibles">Seleccione un médico y una fecha, para ver sus horas disponibles.</string>
    <string name="Label_No_Hay_Horas_Disponibles_De_Medico">No se encontraron horas disponibles, para el médico en el día seleccionado.</string>
    <string name="Error_Login_Response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="Error_Credenciales_Invalidas">Las credenciales son incorrectas</string>
    <string name="Ingresar_Correo_Clave">Por favor ingrese un correo y contraseña</string>
    <string name="bienvenido_nombre">Bienvenido %1$s</string>
    <string name="Label_Creado_El">Esta cita se registró el día %1$s con la siguiente descripción:</string>
    <string name="Cita_Creada_Correctamente">Cita registrada correctamente</string>
    <string name="Error_Crear_Cita">Ocurrió un error inesperado registrando la cita médica.</string>
    <string name="label_password_confirmation">Confirmar clave</string>
    <string name="Error_Registrar_Nuevo_Paciente">Por favor completar todos los datos solicitados.</string>
    <string name="Error_Claves_No_Coinciden">Las contraseñas no coinciden.</string>
    <string name="Error_Register_Validation">Ocurrió un error en el registro.</string>
</resources>