<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPaso1"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp"
    tools:context=".iu.CrearCitaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/label_descripcion" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtEspecialidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_especialidad" />

        <Spinner
            android:id="@+id/cmbEspecialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTipoCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_tipo_cita" />

        <RadioGroup
            android:id="@+id/rgTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checkedButton="@id/rbTipo1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbTipo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type1" />

            <RadioButton
                android:id="@+id/rbTipo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type2" />

            <RadioButton
                android:id="@+id/rbTipo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type3" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSiguiente"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/btn_siguiente" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

