<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPaso2"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp"
    tools:context=".iu.CrearCitaActivity"
    tools:visibility="visible">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_doctor" />

            <Spinner
                android:id="@+id/cmbDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_fecha_cita" />

            <EditText
                android:id="@+id/txtFechaCita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1"
                android:onClick="onClickProgramarCita"
                tools:text="2018-12-06"/>

            <TextView
                android:id="@+id/txtSeleccionarDoctorYFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/Label_Seleccionar_Medico_Fecha_Ver_Horas_Disponibles"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/txtNoHayHorasDisponibles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/Label_No_Hay_Horas_Disponibles_De_Medico"
                android:textColor="@color/black"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/rgHorarioIzq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rgHorarioDer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnSiguiente2"
                style="@style/MenuButton"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/btn_siguiente" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.cardview.widget.CardView>